--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
-project('atmosphere', 'cpp', 'c', default_options: ['cpp_std=c++11'])
+project('nitro', 'cpp', 'c', default_options: ['cpp_std=c++11'])
 
 sources = [
-	'scene_graph.cpp',
+	'nitro.cpp',
 	'gles2.cpp',
 	'animation.cpp',
 	'text.cpp',
@@ -29,6 +29,6 @@ dependencies = [
 ]
 
 glsl2h = generator(executable('glsl2h', 'glsl2h.c'), output: '@PLAINNAME@.h', arguments: ['@INPUT@', '@OUTPUT@'])
-atmosphere = library('atmosphere', sources, glsl2h.process(shaders), dependencies: dependencies, include_directories: include_directories('3rdparty'))
+nitro = library('nitro', sources, glsl2h.process(shaders), dependencies: dependencies, include_directories: include_directories('3rdparty'))
 
-executable('demo', 'demo.cpp', link_with: atmosphere, dependencies: dependencies)
+executable('demo', 'demo.cpp', link_with: nitro, dependencies: dependencies)
