use libpng instead of stb_image

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,7 @@ dependencies = [
 	dependency('glesv2'),
 	dependency('egl'),
 	dependency('x11'),
+	dependency('libpng'),
 	dependency('icu-uc'),
 	dependency('harfbuzz-icu'),
 	dependency('freetype2'),
