--- a/meson.build
+++ b/meson.build
@@ -19,8 +19,7 @@ shaders = [
 	'shaders/texture_mask.vs.glsl',
 ]
 dependencies = [
-	dependency('glesv2'),
-	dependency('egl'),
+	dependency('epoxy'),
 	dependency('x11'),
 	dependency('libpng', version: '>= 1.5.4'),
 	dependency('icu-uc'),
